--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>1.596.2</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
 
   <artifactId>google-container-registry-auth</artifactId>
   <packaging>hpi</packaging>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
 
   <name>Google Container Registry Auth Plugin</name>
   <description>
@@ -50,7 +50,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>google-container-registry-auth-0.1</tag>
   </scm>
 
   <reporting>
