Use GlobalConfiguration so this cred won't show up in add credential dropdown. Add GoogleContainerRegistryTokenSource.

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,13 @@
       <version>14.0.1</version>
     </dependency>
 
+    <!-- Docker Commons -->
+    <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>docker-commons</artifactId>
+        <version>1.0</version>
+    </dependency>
+
     <!-- Auth dependency -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
